# DB25-sql-tokenizer-token-packing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test_packing
cmake/: DB25TokenizerConfig.cmake.in
docs/: ULTRA_PACKING_ANALYSIS.md
include/: cpu_detection.hpp  grammar_dispatch.hpp  keywords.hpp  optimization_hints.hpp  simd_architecture.hpp  simd_tokenizer.hpp
src/: simd_tokenizer.cpp
test/: sql_test.sqls  test_sql_file.cpp
tests/: test_token_packing.cpp
tools/: extract_keywords.cpp
